MDEV-36866 Oracle outer join syntax (+): query with checking for null of non-null column uses wrong query plan and returns wrong result

Recalculate maybe_null for parts witch was fixed before converting
oracle joins.